--- a/Tareas/.vscode/settings.json
+++ b/Tareas/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "algorithm": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "functional": "cpp",
+        "vector": "cpp",
+        "utility": "cpp"
     }
 }
